--- a/os/3.2_memory.md
+++ b/os/3.2_memory.md
@@ -95,7 +95,7 @@ CPU는 메모리에 올라와 있는 프로그램의 명령어들을 실행함.
 - `페이지 폴트⚠️ `️가 발생함. ➡️ `스와핑` 필요
 - 메모리에서 당장 사용하지 않는 영역을 하드디스크로 옮기고 하드디스크의 일부분을 마치 메모리처럼 불러와서 씀.
 
-#### 페이지 폴트
+#### 페이지 폴트 ⚠️
 - 프로세스의 주소 공간(가상메모리)에는 존재하지만 지금 이 컴퓨터의 RAM에는 없는 데이터에 접근했을 경우에 발생
 - 페이지 폴트와 스와핑 과정
   1. 어떤 명령어가 가상 주소에 접근했으나 해당 `페이지`가 없다면 트랩이 발생되어 운영체제에 알리게 됨.
@@ -107,7 +107,7 @@ CPU는 메모리에 올라와 있는 프로그램의 명령어들을 실행함.
 - 페이지 : **가상 메모리**를 사용하는 최소 크기의 단위
 - 프레임 : **실제 메모리**를 사용하는 최소 크기의 단위
 
-### ⚠️ 스레싱
+### 스레싱 ⚠️
 - 메모리의 페이지 폴트율이 높아져 스와핑이 많이 일어나는 것, 이는 컴퓨터의 심각한 성능 저하를 초래함.
 - 해결 방법으로는 메모리를 늘리거나 HDD를 SSD로 바꾸면 됨.
 - 운영체제에서 해결할 수 있는 방법으로는 작업 세트와 PFF가 있음.
@@ -179,3 +179,9 @@ CPU는 메모리에 올라와 있는 프로그램의 명령어들을 실행함.
     - 시계 방향으로 돌면서 0을 찾고 0을 찾는 순간 해당 프로세스를 교체한 후 1로 바꿈
   - **LFU**
     - `LFU(Least Frequently Used)`는 가장 참조 횟수가 적은 페이지를 교체
+  
+
+### 예상 질문
+- 페이지 교체 알고리즘에서 LRU에 대해 설명하세요.
+- 메모리 계층은 어떻게 구성되어 있는지 설명하세요.
+- 가상 메모리에 대해 설명하세요.
