--- a/os/3.2_memory.md
+++ b/os/3.2_memory.md
@@ -82,6 +82,7 @@ CPU는 메모리에 올라와 있는 프로그램의 명령어들을 실행함.
 운영체제는 컴퓨터 내의 한정된 메모리를 극한으로 활용해야 함 -> `메모리 관리❗️`
 
 ### 가상 메모리
+![img.png](img/가상메모리.png)
 - 메모리 관리 기법 중 하나로, 컴퓨터가 실제로 이용 가능한 메모리 자원을 **추상화**하여 이를 사용하는 사용자들에게
   **매우 큰 메모리로 보이게** 만듦.
 - 가상적으로 주어진 주소를 `가상 주소`라고 하며, 실제 메모리상에 있는 주소를 `실제 주소`라고 함.
@@ -108,6 +109,8 @@ CPU는 메모리에 올라와 있는 프로그램의 명령어들을 실행함.
 - 프레임 : **실제 메모리**를 사용하는 최소 크기의 단위
 
 ### 스레싱 ⚠️
+<img src="img/스레싱.png" height=200 width=270>
+
 - 메모리의 페이지 폴트율이 높아져 스와핑이 많이 일어나는 것, 이는 컴퓨터의 심각한 성능 저하를 초래함.
 - 해결 방법으로는 메모리를 늘리거나 HDD를 SSD로 바꾸면 됨.
 - 운영체제에서 해결할 수 있는 방법으로는 작업 세트와 PFF가 있음.
