chore: [database] 데이터베이스의 기본 예상질문 추가

--- a/database/4.1_database_basic.md
+++ b/database/4.1_database_basic.md
@@ -61,23 +61,29 @@
 
 ### 1:1 관계
 - ex) 유저당 유저 이메일이 하나씩 있음.
+
 <img src="img/1대1.png" height=250 width=350>
+
 - 테이블을 두 개의 테이블로 나눠 테이블의 구조를 더 이해하기 쉽게 만들어줌.
 
 ### 1:N 관계
 - 한 개체가 다른 많은 개체를 포함하는 관계
 - ex) 유저당 0개 이상의 상품을 장바구니에 넣음.
-  <img src="img/1대1.png" height=250 width=350>
+
+<img src="img/1대1.png" height=250 width=350>
 
 ### N:M 관계
 - 테이블 두 개를 직접적으로 연결해서 구축하지 않고, 1:N, 1:M 이라는 관계를 갖는 테이블 두개로 나눠서 설정.
 - ex) 학생은 여러 개의 강의를 들을 수 있고, 강의도 여러 명의 학생을 포함할 수 있음.
-  <img src="img/N대M.png" height=400 width=350>
+
+<img src="img/N대M.png" height=400 width=350>
 
 ## 4.1.7 키
 - 테이블 간의 관계를 더 명확하게 하고 테이블 자체의 인덱스를 위해 설정된 장치
 - `기본키, 외래키, 후보키, 슈퍼키, 대체키`가 있음.
-  <img src="img/키.png" height=400 width=350>
+
+<img src="img/키.png" height=400 width=350>
+  
 - `유일성` : 중복되는 값이 없음
 - `최소성` : 필드를 조합하지 않고 최소 필드만 써서 키를 형성할 수 있음
 
@@ -104,3 +110,7 @@
 
 ### 슈퍼키
 - 각 레코들을 유일하게 식별할 수 있는 **유일성을 갖춘 키**
+
+## 예상질문
+- 외래키와 기본키에 대해 설명해주세요.
+- 테이블의 1:N 관계 예시를 들어주세요
