--- a/.github/ISSUE_TEMPLATE/이번주-주제.md
+++ b/.github/ISSUE_TEMPLATE/이번주-주제.md
@@ -1,18 +1,31 @@
 ---
 name: 이번주 주제
 about: " 이번주 공부 내용 적어주세요"
-title: "[24년 xx월 xx주차] 주제"
+title: "[25년 xx월 xx주차] 주제"
 labels: ''
-assignees: dav1n9, mango606, seohee-P
+assignees: mango606, seohee-P
 
 ---
 
 ### 🚀 스터디
-- 발표 : ex) 2023-11-29 (수) 20시 ~ 21시 (1h)
-- 모의 면접 : 
+- 공부 : ex) 2025-01-29 (수) ~ 2025-01-30 (목)
+- 발표 : ex) 2025-01-29 (수) 20시 ~ 21시 (1h)
+- 모의 면접 : ex) 2025-01-29 (수) 20시 ~ 21시 (1h)
 
 ###  🎯공통 주제
-- 
+- `책 이름`
+   <details>
+  <summary>&nbsp;목차</summary>
+  <div markdown="1">
+
+      5.1 복잡도
+         5.1.1 시간 복잡도
+         5.1.2 공간 복잡도
+         5.1.3 자료 구조에서의 시간 복잡도
+
+  </div>
+</details>
+
 - 
 
 ### 🕵️ 각자 맡은 주제
