--- a/datastructure/5.3_non_linear_data_structure.md
+++ b/datastructure/5.3_non_linear_data_structure.md
@@ -58,8 +58,33 @@
   - ex. 1번 노드가 0 레벨이면, 2번 노드와 3번 노드는 1레벨
 - `서브트리` : 트리 내의 하위 집합(트리 내에 있는 부분집합)
 ### 이진 트리
+- 자식 노드의 수가 두 개 이하인 트리
+
+![img.png](img/이진트리1.png)
+
+- 정이진 트리(Full Binary Tree) : 모든 노드의 자식 노드가 0 또는 2개인 이진 트리
+- 완전 이진 트리(Complete Binary Tree) : 왼쪽에서부터 채워져 있는 이진 트리
+  - 마지막 레벨을 제외하곤 모든 레벨이 완전히 채워져 있고, 마지막 레벨은 왼쪽부터 채워짐.
+- 변질 이진 트리(Degenerate Binary Tree) : 모든 노드의 자식 노드가 1개인 이진 트리
+
+<img src="img/이진트리2.png" height="180">
+
+- 포화 이진 트리(Perfect Binary Tree) : 모든 노드가 꽉 차 있는 이진 트리
+- 균형 이진 트리(Balanced Binary Tree) : 왼쪽과 오른쪽 노드의 높이 차이가 1 이하인 이진 트리
+  - map, set을 구성하는 레드 블랙 트리는 균형 이진 트리 중 하나임.
 
 ### 이진 탐색 트리
+![img.png](img/이진_탐색_트리.png)
+
+- 노드의 오른쪽 하위 트리에는 노드 값보다 큰 값이 있는 노드만 포함되고,
+왼쪽 하위 트리에는 노드 값보다 작은 값이 들어 있는 트리
+- 검색을 하기에 용이
+
+<img src="img/이진탐색트리_최악.png" height="170">
+
+- 보통 요소를 찾을 때 시간복잡도가 `O(logn)`이지만, 최약의 경우 `O(n)`이 걸림.
+  - 이진 탐색 트리는 삽입 순서에 따라 **선형적**일 수 있기 떄문.
+
 
 ### AVL 트리
 ![img.png](img/AVL트리.png)
