chore: [data structure] 비선형 자료 구조 면접 예상 질문 추가

--- a/datastructure/5.3_non_linear_data_structure.md
+++ b/datastructure/5.3_non_linear_data_structure.md
@@ -165,3 +165,10 @@
   - 삽입, 삭제, 탐색 시 평균적으로 O(1)의 시간 복잡도를 가짐.
   - 이를 통해 작은 크기의 캐시 메모리로도 프로세스를 관리하도록 할 수 있음.
 
+## 예상 질문
+- 해쉬 테이블에 대해 설명하세요.
+- 이진 탐색 트리의 문제점과 그 문제를 해결하기 위한 트리에 대해 설명하세요.
+- 그래프와 트리의 차이점에 대해 설명하세요.
+- 힙에 대해 설명하고, 최대힙의 삽입과 삭제 방식에 대해 설명하세요.
+- 레드 블랙 트리에 대해 설명하세요.
+- 맵과 셋에 대해 설명하세요.
