chore : [java] 참조 타입 코드 블럭 java로 적용

--- a/java/05_reference_types/5.11_main(String[] args)_used_for.md
+++ b/java/05_reference_types/5.11_main(String[] args)_used_for.md
@@ -13,7 +13,7 @@
     public static void main(String[] args) { }
     ```
     main() 메소드에서 문자열 "10"과 "20"은 다음과 같이 얻을 수 있음.
-    ```
+    ``` java
     String x = args[0];
     String y = args[1];
     ```
