--- a/java/05_reference_types/5.12_Enum_type.md
+++ b/java/05_reference_types/5.12_Enum_type.md
@@ -9,7 +9,7 @@
     ```
 - 열거 상수 : 열거 타입으로 사용할 수 있는 한정된 값
   - 알파벳으로 정의하며, 모두 대문자로 작성하는 것이 관례임.
-    ```
+    ``` java
       public enum Week {
           MONDAY,
           TUESDAY,
@@ -26,7 +26,7 @@
       }
     ```
 - 열거 타입도 하나의 데이터 타입이므로 변수로 선언하고 사용해야 하고, 열거 상수를 대입할 때는 `열거타입.열거상수` 형태로 작성함.
-    ```
+    ``` java
   // Week로 변수를 선언하고, 열거 상수인 SUNDAY를 대입하기
     Week today = Week.SUNDAY;
     ```
