--- a/java/05_reference_types/5.9_array_copy.md
+++ b/java/05_reference_types/5.9_array_copy.md
@@ -9,7 +9,7 @@ Object dest - 새 배열
 int destPos - 새 배열 붙어넣기 시작 인덱스
 int length - 복사 항목 수
 ```
-```
+``` java
 // 원본 배열이 arr1 이고, 새 배열이 arr2 일 경우 arr1의 모든 항복을 arr2로 복사
 System.arraycopy(arr1, 0, arr2, 0, arr1.length);
 ```
