--- a/java/05_reference_types/5.10_for_each_loop.md
+++ b/java/05_reference_types/5.10_for_each_loop.md
@@ -2,7 +2,7 @@
 - 자바는 배열 및 컬렉션을 좀더 쉽게 처리할 목적으로 `for-each loop를` 제공한다.
 - 카운터 변수와 증감식을 사용하지 않고, 항목의 개수만큼 반복하는 for 문이다.
 ![img.png](img/for_each_loop.png)
-```
+``` java
 // 사용 예시
 int[] scores = { 95, 71, 84, 32};
 int sum = 0;
