--- a/java/05_reference_types/5.7_multi_dimensional_array.md
+++ b/java/05_reference_types/5.7_multi_dimensional_array.md
@@ -9,7 +9,7 @@
 ```
 ## 값 목록으로 다차원 배열 생성
 두 반의 학생 점수를 저장하는 배열을 생성하기(각 반은 1차원 배열, 해당 반의 학생 점수는 2차원 배열)
-```
+``` java
 int[][] scores = {
     {80, 90, 96},           ---> 1차원 배열의 0 인덱스 : 첫 번째 반 성적
     {76, 88}                ---> 1차원 배열의 1 인덱스 : 두 번째 반 성적
@@ -17,12 +17,12 @@ int[][] scores = {
 ```
 ![img.png](img/다차원배열_생성1.png)
 각 반의 학생 점수를 읽기
-```
+``` java
 int score = scores[0][2];   // 96
 int score = scores[1][1];   // 88
 ```
 반의 개수는 1차원 배열의 길이와 동일, 각 반의 학생 수는 2차우너 배열의 길이와 동일
-```
+``` java
 scores.length               // 반의 수 : 2
 scores[0].length            // 첫 번째 반의 학생 수 : 3
 scores[1].length            // 두 번째 반의 학생 수 : 2
@@ -35,7 +35,7 @@ scores[1].length            // 두 번째 반의 학생 수 : 2
 ```
 항목의 값은 다음과 같이 **초기값**을 가짐.
 - 정수 타입 - 0 / 실수 타입 - 0.0 / 논리 타입 - false / 참조 타입 - null
-```
+``` java
 // 2차원 배열의 길이는 모두 3이면서 항목은 0으로 초기화
 int[][] scores = new int[2][3];
 
@@ -43,7 +43,7 @@ int[][] scores = new int[2][3];
 String[][] names = new String[2][3];
 ```
 ![img1.png](img/다차원배열_생성2.png)
-```
+``` java
 // 두 반의 학생 수가 다를 경우 - 2차원 배열의 길이를 다르게 줄 수 있음.
 int[][] scores = new int[2][];
 scores[0] = new int[3];     // 첫 번째 반의 학생 수가 3명
