--- a/java/06_classes/6.8_method_declaration_and_invocation.md
+++ b/java/06_classes/6.8_method_declaration_and_invocation.md
@@ -41,5 +41,29 @@ int sum(int ... values) {
 ```
 
 ### return 문
-
+- 💠 return 문 : 메소드의 실행을 강제 종료하고 호출하는 곳으로 돌아간다는 의미
+- 메소드 선언에 리턴 타입이 있는 경우에는 return 문 뒤에 리턴값을 추가로 지정해야 함.
+```java
+return 리턴값;
+```
+- return 문 이후에 실행문을 작성하면 `Unreachable code`라는 컴파일 에러⚠️가 발생함.
+  - return 문 이후의 실행문은 결코 실행되지 않기 때문.
+  ```java
+  return result;
+  System.out.println(result);   //Unreachable code
+  ```
+  
 ### 메소드 오버로딩
+- 💠 메소드 오버로딩 : 메소드 이름은 같되 매개변수의 타입, 개수, 순서가 다른 메소드를 여러 개 선언하는 것
+- 메소드 오버로딩의 목적은 다양한 매개값을 처리하기 위해서임.
+```java
+int plus(int x, int y){
+    int result = x + y;
+    return result;
+}
+
+double plus(double x, double y){
+    double result = x + y;
+    return result;
+}
+```
