--- a/java/06_classes/6.1_object_oriented_programming.md
+++ b/java/06_classes/6.1_object_oriented_programming.md
@@ -69,3 +69,6 @@
 - 프로그램을 구성하는 객체(부품)를 바꾸면 프로그램의 실행 성능이 다르게 나올 수 있음.
   - ex) 자동차에 어떤 타이어를 장착하느냐에 따라서 주행 성능이 달라짐.
 - 다형성을 구현하기 위해서는 자동 타입 변환과 재정의 기술이 필요함. ➡️ `상속과 인터페이스 구현`을 통해 얻어짐.
+
+### 면접 예상 질문
+- 객체지향 프로그래밍의 4가지 주요 특성에 대해 설명해주세요.
