--- a/java/06_classes/6.2_objects_and_classes.md
+++ b/java/06_classes/6.2_objects_and_classes.md
@@ -5,3 +5,6 @@
 - 동일한 클래스로부터 여러 개의 인스턴스를 만들 수 있는데, 이것은 동일한 설계도로 여러 대의 자동차를 만드는 것과 동일함.
 
 ![img.png](img/클래스_인스턴스.png)
+
+### 면접 예상 질문
+- 객체와 클래스의 차이점은 무엇인지 설명해주세요.
