chore : [java] 객체 생성과 클래스 변수 면접 예상 질문 추가

--- a/java/06_classes/6.4_object_creation_and_class_variables.md
+++ b/java/06_classes/6.4_object_creation_and_class_variables.md
@@ -14,3 +14,6 @@
 - 라이브러리 클래스 : 실행할 수 없으며 다른 클래스에서 이용하는 클래스
 - 실행 클래스 : 메소드를 가지고 있는 실행 가능한 클래스
 - 일반적으로 자바 프로그램은 하나의 실행 클래스와 여러 개의 라이브러리 클래스들로 구성됨.
+
+### 면접 예상 질문
+- 객체 생성 시 메모리에서 일어나는 일을 설명해주세요.
