chore : [java] 필드 선언과 사용 면접 예상 질문 추가

--- a/java/06_classes/6.6_field_declaration_and_usage.md
+++ b/java/06_classes/6.6_field_declaration_and_usage.md
@@ -71,3 +71,6 @@ void method(...) {
 ```
 - 객체 내부에서는 단순히 필드명으로 읽고 변경할 수 있지만 외부 객체에서는 참조 변수와 **도트(.) 연산자**를 이용해서 필드를 읽고 변경해야 함.
 - `도트(.)`는 객체 접근 연산자로, 객체가 가지고 있는 필드나 메소드에 접근하고자 할떄 참조 변수 뒤에 붙임.
+
+### 면접 예상 질문
+- 필드와 지역변수의 차이점은 무엇인지 설명해주세요.
