--- a/java/06_classes/6.7_constructor_declaration_and_invocation.md
+++ b/java/06_classes/6.7_constructor_declaration_and_invocation.md
@@ -94,3 +94,7 @@ Car(String model) {
     this(model, "은색", 250);
 }
 ```
+
+### 면접 예상 질문
+- 생성자의 특징과 용도는 무엇인지 설명해주세요.
+- this 키워드의 용도와 사용하닌 경우는 언제인지 설명해주세요.
