chore : [java] 생성자 선언과 호출 오타 수정
63줄 떄 -> 때

--- a/java/06_classes/6.7_constructor_declaration_and_invocation.md
+++ b/java/06_classes/6.7_constructor_declaration_and_invocation.md
@@ -60,7 +60,7 @@ public class Korean {
   ```java
   Korean k1 = new Korean("홍길동", "001122-1234567");
   ```
-- 매개변수명이 필드명과 동일할 떄는 필드임을 구분하기 위해 `this 키워드`를 필드명 앞에 붙여줌.
+- 매개변수명이 필드명과 동일할 때는 필드임을 구분하기 위해 `this 키워드`를 필드명 앞에 붙여줌.
   - this는 현재 객체를 말하며, this.name은 현재 객체의 데이터(필드)로서의 name을 말함.
   ```java
   public Korean(String name, String ssn) { // 매개변수명이 필드명과 동일.
