chore : [java] 생성자 선언과 호출 오타 수정
30줄 떄 -> 때

--- a/java/06_classes/6.7_constructor_declaration_and_invocation.md
+++ b/java/06_classes/6.7_constructor_declaration_and_invocation.md
@@ -27,7 +27,7 @@
 ```
 - 생성자는 메소드와 비슷한 모양을 가지고 있지만, 리턴 타입이 없고 클래스 이름과 동일.
 - 매개변수는 new 연산자로 생성자를 호출할 때 매개값을 생성자 블록 내부로 전달하는 역할을 함.
-  - ex) Car 생성자를 호출할 떄 3개의 매개값을 블록 내부로 전달하는 경우 아래와 같은 생성자가 선언되어야 함.
+  - ex) Car 생성자를 호출할 때 3개의 매개값을 블록 내부로 전달하는 경우 아래와 같은 생성자가 선언되어야 함.
   ```java
   Car myCar = new Car("그랜저". "검정", 300);
   ```
