chore : [java] 생성자 선언과 호출 오타 수정

--- a/java/06_classes/6.7_constructor_declaration_and_invocation.md
+++ b/java/06_classes/6.7_constructor_declaration_and_invocation.md
@@ -86,7 +86,7 @@ public class Korean {
   ```
 
 ### 다른 생성자 호출
-- 생성자 오버로딩이 많아질 경우 생성자 간의 중보된 코드가 발생할 수 있음.
+- 생성자 오버로딩이 많아질 경우 생성자 간의 중복된 코드가 발생할 수 있음.
 - 이 경우에는 공통 코드를 한 생성자에만 집중적으로 작성하고, 나머지 생성자는 this()를 사용하여 공통 코드를 가지고 있는 생성자를 호출하는 방법으로 개선할 수 있음.
 - this는 생성자의 첫 줄에 작성되며 다른 생성자를 호출하는 역할을 함. 호출하고 싶은 생성자의 매개변수에 맞게 매개값을 제공하면 됨.
 ```java
