chore : [java] 클래스 상속 코드 블럭 java 스타일로 변경

--- a/java/07_inheritance/7.2_class_inheritance.md
+++ b/java/07_inheritance/7.2_class_inheritance.md
@@ -12,85 +12,90 @@
 - 아래는 Phone 클래스를 상속해서 SmartPhone 클래스를 작성한 예시.
   <details><summary>&nbsp;👵🏻 부모 클래스 - Phone.java</summary>
 
-      public class Phone {
-          // 필드 선언
-          public String model; 
-          public String color;
+  ``` java
+  public class Phone {
+      
+      // 필드 선언
+      public String model; 
+      public String color;
 
-          // 메소드 선언
-          public void bell() {
-              System.out.println("벨이 울립니다."); 
-          }
-
-          public void sendVoice(String message) {
-              System.out.println("자기: " + message); 
-          }
-
-          public void receiveVoice(String message) { 
-              System.out.println("상대방: " + message); 
-          }
-
-          public void hangUp() { 
-              System.out.println("전화를 끊습니다."); 
-          }
+      // 메소드 선언
+      public void bell() {
+          System.out.println("벨이 울립니다."); 
       }
 
+      public void sendVoice(String message) {
+          System.out.println("자기: " + message); 
+      }
+
+      public void receiveVoice(String message) { 
+          System.out.println("상대방: " + message); 
+      }
+
+      public void hangUp() { 
+          System.out.println("전화를 끊습니다."); 
+      }
+  }
+  ```
   </details>
-  
+
   <details><summary>&nbsp;👩🏻 자식 클래스 - SmartPhone.java</summary>
 
-      public class SmartPhone extends Phone {
-          // 필드 선언
-          public boolean wifi;
-          
-          // 생성자 선언
-          public SmartPhone(String model, String color) {
-              this.model = model;
-              this.model = color;
-          }
-
-          // 메소드 선언
-          public void setWifi(boolean wifi) {
-              this.wifi = wifi;
-              System.out.println("와이파이 상태를 변경했습니다.")
-          }
-
-          public void internet() {
-              System.out.println("인터넷에 연결합니다."); 
-          }
+  ```java
+  public class SmartPhone extends Phone {
+      // 필드 선언
+      public boolean wifi;
+  
+      // 생성자 선언
+      public SmartPhone(String model, String color) {
+          this.model = model;
+          this.model = color;
       }
+  
+      // 메소드 선언
+      public void setWifi(boolean wifi) {
+          this.wifi = wifi;
+          System.out.println("와이파이 상태를 변경했습니다.");
+      }
+  
+      public void internet() {
+          System.out.println("인터넷에 연결합니다."); 
+      }
+  }
+  ```
 
   </details>
   
-  <details><summary>&nbsp;실행 클래스 - SmartPhoneExample.java</summary>
+  <details><summary>&nbsp;⚙️ 실행 클래스 - SmartPhoneExample.java</summary>
+  
+  ```java
+  public class SmartPhoneExample {
 
-      public class DmbCellPhoneExample {
-
-          public static void main(String[] args) {
-              // SmartPhone 객체 생성
-              SmartPhone myPhone = new SmartPhone("갤럭시", "은색");
-
-  	          // Phone으로부터 상속받은 필드
-  	          System.out.println("모델: " + myPhone.model);
-                System.out.println("색상: " + myPhone.color);
+      public static void main(String[] args) {
+          // SmartPhone 객체 생성
+          SmartPhone myPhone = new SmartPhone("갤럭시", "은색");
+          
+          // Phone으로부터 상속받은 필드
+          System.out.println("모델: " + myPhone.model);
+          System.out.println("색상: " + myPhone.color);
   	
-  	          // SmartPhone의 필드 읽기
-  	          System.out.println("와이파이 상태: " + myPhone.wifi);
+          // SmartPhone의 필드 읽기
+          System.out.println("와이파이 상태: " + myPhone.wifi);
   	
-  	          // Phone으로 부터 상속받은 메소드 호출
-  	          myPhone.bell();
-  	          myPhone.sendVoice("여보세요.");
-  	          myPhone.receiveVoice("안녕하세요! 저는 홍길동입니다.");
-  	          myPhone.sendVoice("아~ 네, 반갑습니다.");
-                myPhone.hangUp();
+          // Phone으로 부터 상속받은 메소드 호출
+          myPhone.bell();
+          myPhone.sendVoice("여보세요.");
+          myPhone.receiveVoice("안녕하세요! 저는 홍길동입니다.");
+          myPhone.sendVoice("아~ 네, 반갑습니다.");
+          myPhone.hangUp();
   	
-  	          // SmartPhone의 메소드 호출
-  	          myPhone.setWifi(true);
-  	          myPhone.internet();
-          }
+          // SmartPhone의 메소드 호출
+          myPhone.setWifi(true);
+          myPhone.internet();
       }
-
-      // 출력
+  }
+  
+  /*  출력
       모델: 갤럭시
       색상: 은색
       와이파이 상태: false
@@ -101,7 +106,9 @@
       전화를 끊습니다.
       와이파이 상태를 변경했습니다.
       인터넷에 연결합니다.
+  */
 
+  ```
   </details>
 
 ### 면접 예상 질문
