chore: [java] 다형성 오타 수정

--- a/java/07_inheritance/7.8_polymorphism.md
+++ b/java/07_inheritance/7.8_polymorphism.md
@@ -65,7 +65,7 @@ driver.drive(vehicle);
 
 ## ⁉️예상 질문
 
-1. 디형성(Polymorphism)이 무엇인지 설명해주세요.
+1. 다형성(Polymorphism)이 무엇인지 설명해주세요.
 2. 다형성이 객체지향 프로그래밍에서 왜 중요한지 설명해주세요.
 3. Field Polymorphism과 Parameter Polymorphism의 차이를 설명해주세요.
 4. 상속을 구현하기 위해 필요한 기능을 설명해주세요.
