fix : [java] 부모 생성자 호출 오타 수정

--- a/java/07_inheritance/7.3_parent_constructor_call.md
+++ b/java/07_inheritance/7.3_parent_constructor_call.md
@@ -13,7 +13,7 @@
 - `super()`는 컴파일 과정에서 **자동 추가**되고, 이것은 **부모의 기본 생성자를 호출**함.
 - 만약 **부모 클래스에 기본 생성자가 없다면** 자식 생성자 선언에서 **⚠️컴파일 에러⚠️**가 발생함.
 - 부모 클래스에 기본 생성자가 없고 매개변수를 갖는 생성자만 있다면 super(매개값, ...) 코드를 직접 넣어야 함.
-  - ex) `super(model, coler);`
+  - ex) `super(model, color);`
 
 
 ### 면접 예상 질문
