fix : [java] 자바 표준 모듈 오타 수정

--- a/java/10_libraries_and_modules/10.9_java_standard_modules.md
+++ b/java/10_libraries_and_modules/10.9_java_standard_modules.md
@@ -8,8 +8,8 @@
   - 제한된 자원만 가지고 있는 소형(임베디드) 기기에는 사이즈가 작은 자바 실행 환경이 필요함.
 
 ![img.png](img/표준라이브러리.png)
-- 자바 표준 모듈은 모듈 A에서 모듈 D까지 제공하지만, 프로젝트를 실행하는 데는 모듈 A와 모듈 B만 있으면 됨.
-- 모듈 C와 모듈 D를 제외하고 프로젝트만 실행할 수 있는 작은 실행 환경을 `jlink` 명령어로 생성할 수 있음.
+- 자바 표준 모듈은 모듈 A에서 모듈 D까지 제공하지만, 프로젝트를 실행하는 데는 모듈 A와 모듈 C만 있으면 됨.
+- 모듈 B와 모듈 D를 제외하고 프로젝트만 실행할 수 있는 작은 실행 환경을 `jlink` 명령어로 생성할 수 있음.
 
 
 ### 🙋 면접 예상 질문
