fix : [java] 라이브러리 오타 수정

--- a/java/10_libraries_and_modules/10.1_libraries.md
+++ b/java/10_libraries_and_modules/10.1_libraries.md
@@ -7,7 +7,7 @@
 - 라이브러리를 이용하라면 라이브러리 JAR 파일을 `ClassPath`에 추가해야 함.
   - 💠 ClassPath : 클래스를 찾기 위한 경로
   - **콘솔에서 프로그램을 실행할 경우**
-    - java 명령어를 실행할 떄 -classpath로 제공
+    - java 명령어를 실행할 때 -classpath로 제공
     - CLASSPATH 환경 변수에 경로를 추가
   - **이클립스 프로젝트에서 실행할 경우**
     - 프로젝트의 Build Path에 추가
