--- a/java/10_libraries_and_modules/10.6_transitive_dependencies.md
+++ b/java/10_libraries_and_modules/10.6_transitive_dependencies.md
@@ -6,7 +6,7 @@
 ![img.png](img/전이의존2.png)
 - 위와 같이 의존 관계를 변경하면, my_application_2는 my_module_a에 의존하고, my_module_a는
 my_module_b에 의존함.
-- 위와 같이 모듈 기술자를 작성하면, my_application_2의 Main 클래스는 my_module_b 모듈을 사용하려면 `컴파일 오류⚠️`가 발생함.
+- 위와 같이 모듈 기술자를 작성하면, my_application_2의 Main 클래스는 my_module_b 모듈을 사용할 수 없기 때문에 `컴파일 오류⚠️`가 발생함. ➡️ my_application_2의 모듈 기술자에서 requires my_module_b가 빠졌기 때문에
 
 ![img.png](img/전이의존3.png)
 - 이를 해결하기 위해 my_module_a의 모듈 기술자에 `transitive` 키워드와 함께 my_module_b를 의존 설정하면 됨.
@@ -14,4 +14,4 @@ my_module_b에 의존함.
 
 
 ### 🙋 면접 예상 질문
-- transitive 키워드에 대해 설명해주세요.
+- `transitive` 키워드에 대해 설명해주세요.
