fix : [java] 집합 모듈 오타 수정

--- a/java/10_libraries_and_modules/10.7_aggregator_modules.md
+++ b/java/10_libraries_and_modules/10.7_aggregator_modules.md
@@ -1,7 +1,7 @@
 ## 10.7 집합 모듈
 - 💠 집합 모듈 : 여러 모듈을 모아놓은 모듈
-- 자주 사용하는 모듈들을 일일이 requires하는 번거로움을 피하고 싶을 때 집합 모듈을 생성하고 편리함.
-- 집합 모듈은 자체적인 패키지를 가지지 않고, 모듈 기술자에 전이 의존 설정만 함.
+- 자주 사용하는 모듈들을 일일이 requires하는 번거로움을 피하고 싶을 때 집합 모듈을 생성하면 편리함.
+- 집합 모듈은 자체적인 패키지를 가지지 않고, **모듈 기술자에 전이 의존 설정만 함**.
 
 ```java
 module my_module {
