chore : [java] 모듈 배포용 JAR 파일 설명 추가

--- a/java/10_libraries_and_modules/10.4_JAR_files_for_module_distribution.md
+++ b/java/10_libraries_and_modules/10.4_JAR_files_for_module_distribution.md
@@ -1,4 +1,6 @@
 ## 10.4 모듈 배포용 JAR 파일
+- 모듈 개발을 완료하면 다른 모듈에서 쉽게 사용할 수 있도록 바이트코드 파일(.class)로 구성된 배포용 JAR 파일을 생성할 수 있음.
+- 모듈 배포용 JAR 파일을 만든 후, 모듈을 사용할 프로젝트에서 해당 JAR 파일을 가져와서 사용하면 됨. (Modulepath에 JAR 파일 추가)
 ```java
 // module-info.java
 module my_application_3 {
@@ -6,6 +8,7 @@ module my_application_3 {
     requires my_module_b;
 }
 ```
+- my_application_3 프로젝트는 my_module_a 모듈과 my_module_b 모듈을 사용해야 하므로 두 모듈 프로젝트에 대한 의존 설정을 모듈 기술자에 작성함.
 ```java
 package app;
 
