chore: [java] 정적 메소드 # 수정

--- a/java/08_interfaces/8.6_static_method.md
+++ b/java/08_interfaces/8.6_static_method.md
@@ -1,4 +1,4 @@
-### 8.6 정적 메소드
+## 8.6 정적 메소드
 - 인터페이스에는 구현 객체 없이도 호출할 수 있는 정적 메소드도 포함할 수 있음.
 - 정적 메소드는 인터페이스명을 통해 직접 접근하여 호출 가능함. 클래스 인스턴스가 필요하지 않음.
 
