--- a/java/08_interfaces/8.7_private_method.md
+++ b/java/08_interfaces/8.7_private_method.md
@@ -1,4 +1,4 @@
-### 8.7 private 메소드
+## 8.7 private 메소드
 - 인터페이스 내에서 `private` 메소드를 선언할 수 있음.
 - `private` 메소드는 인터페이스 내의 디폴트 메소드나 다른 `private` 메소드에서 중복 코드를 줄이기 위해 사용됨.
 - `private` 정적 메소드는 인터페이스 내의 다른 정적 메소드에서 호출 가능하며, 구현 객체를 요구하지 않음.
