chore: [java] 중첩 클래스 # 수정

--- a/java/09_nested_and_anonymous/9.1_nested_class.md
+++ b/java/09_nested_and_anonymous/9.1_nested_class.md
@@ -1,13 +1,13 @@
-# 9.1 중첩 클래스
+## 9.1 중첩 클래스
 
-## 중첩 클래스(Nested Class)
+### 중첩 클래스(Nested Class)
 클래스 내부에 선언한 클래스를 의미함.
 
-### 장점
+#### 장점
 - 클래스의 멤버를 쉽게 사용할 수 있음.
 - 외부에 중첩 관계 클래스를 감춤으로써 코드의 복잡성을 줄일 수 있음.
 
-### 중첩 클래스의 분류
+#### 중첩 클래스의 분류
 중첩 클래스는 **선언 위치에 따라** 두 가지로 분류됨.
 
 1. **멤버 클래스**: 클래스의 멤버로서 선언되는 중첩 클래스
@@ -19,7 +19,7 @@
 | **멤버 클래스** (정적 멤버 클래스) | `class A { static class B { ... } }` | `A` 객체를 생성하지 않아도 `B` 객체를 생성할 수 있음 |
 | **로컬 클래스** | `class A { void method() { class B { ... } } }` | `method()`가 실행될 때만 `B` 객체를 생성할 수 있음 |
 
-### 중첩 클래스의 바이트코드 파일
+#### 중첩 클래스의 바이트코드 파일
 중첩 클래스를 컴파일하면 별도의 바이트코드 파일이 생성됨.
 
 ```java
