chore: [java] 인스턴스 멤버 클래스 # 수정

--- a/java/09_nested_and_anonymous/9.2_instance_member_class.md
+++ b/java/09_nested_and_anonymous/9.2_instance_member_class.md
@@ -1,6 +1,6 @@
-# 9.2 인스턴스 멤버 클래스
+## 9.2 인스턴스 멤버 클래스
 
-## 인스턴스 멤버 클래스란?
+### 인스턴스 멤버 클래스란?
 `A` 클래스의 멤버로 선언된 `B` 클래스를 의미함.
 
 ```java
@@ -10,7 +10,7 @@ public class A {
 }
 ```
 
-### 접근 제한자에 따른 접근 범위
+#### 접근 제한자에 따른 접근 범위
 
 | 구분 | 접근 범위 |
 |------|----------|
@@ -18,7 +18,7 @@ public class A {
 | `class B {}` | 같은 패키지에서만 `B` 클래스를 사용할 수 있음 |
 | `private class B {}` | `A` 클래스 내부에서만 `B` 클래스를 사용할 수 있음 |
 
-### B 객체 생성 방식
+#### B 객체 생성 방식
 - `B` 객체는 `A` 객체가 있어야만 생성할 수 있음.
 - `A` 클래스 외부에서 `B` 객체를 생성하려면 `A` 객체를 먼저 생성해야 함.
 
@@ -27,7 +27,7 @@ A a = new A();  // A 객체 생성
 A.B b = a.new B();  // B 객체 생성
 ```
 
-### 인스턴스 멤버 클래스 내부에서 사용 가능한 요소
+#### 인스턴스 멤버 클래스 내부에서 사용 가능한 요소
 - **Java 17부터** 인스턴스 멤버 클래스 내부에서 정적 필드와 정적 메소드 선언이 가능함.
 
 ```java
