--- a/java/09_nested_and_anonymous/9.3_static_member_class.md
+++ b/java/09_nested_and_anonymous/9.3_static_member_class.md
@@ -1,6 +1,6 @@
-# 9.3 정적 멤버 클래스
+## 9.3 정적 멤버 클래스
 
-## 정적 멤버 클래스란?
+### 정적 멤버 클래스란?
 `static` 키워드를 사용하여 `A` 클래스의 멤버로 선언된 `B` 클래스를 의미함.
 
 ```java
@@ -10,7 +10,7 @@ public class A {
 }
 ```
 
-### 접근 제한자에 따른 접근 범위
+#### 접근 제한자에 따른 접근 범위
 
 | 구분 | 접근 범위 |
 |------|----------|
@@ -18,7 +18,7 @@ public class A {
 | `static class B {}` | 같은 패키지에서만 `B` 클래스를 사용할 수 있음 |
 | `private static class B {}` | `A` 클래스 내부에서만 `B` 클래스를 사용할 수 있음 |
 
-### B 객체 생성 방식
+#### B 객체 생성 방식
 - `A` 객체를 생성하지 않고 `B` 객체를 생성할 수 있음.
 
 ```java
