--- a/java/09_nested_and_anonymous/9.4_local_class.md
+++ b/java/09_nested_and_anonymous/9.4_local_class.md
@@ -1,6 +1,6 @@
-# 9.4 로컬 클래스
+## 9.4 로컬 클래스
 
-## 로컬 클래스란?
+### 로컬 클래스란?
 메소드 내부에서 선언된 클래스를 의미함.
 
 ```java
@@ -12,7 +12,7 @@ public class A {
 }
 ```
 
-### 특징
+#### 특징
 - **메소드가 실행될 동안만** 객체를 생성할 수 있음.
 - Java 17부터 **정적 필드와 정적 메소드 선언이 가능함**.
 
