chore: [java] 바깥 멤버 접근 # 수정

--- a/java/09_nested_and_anonymous/9.5_outer_member_access.md
+++ b/java/09_nested_and_anonymous/9.5_outer_member_access.md
@@ -1,6 +1,6 @@
-# 9.5 바깥 멤버 접근
+## 9.5 바깥 멤버 접근
 
-## 바깥 클래스의 멤버 접근 제한
+### 바깥 클래스의 멤버 접근 제한
 
 | 중첩 클래스 유형 | 사용 가능한 멤버 |
 |---------------|----------------|
