--- a/java/09_nested_and_anonymous/9.7_anonymous_object.md
+++ b/java/09_nested_and_anonymous/9.7_anonymous_object.md
@@ -1,9 +1,9 @@
-# 9.7 익명 객체
+## 9.7 익명 객체
 
-## 익명 객체란?
+### 익명 객체란?
 이름이 없는 객체를 의미함.
 
-### 익명 자식 객체
+#### 익명 자식 객체
 ```java
 new 부모클래스() {
     void method() {
@@ -12,7 +12,7 @@ new 부모클래스() {
 };
 ```
 
-### 익명 구현 객체
+#### 익명 구현 객체
 ```java
 new 인터페이스() {
     @Override
