docs: [java] 제네릭 메소드 이미지 추가

--- a/java/13_generics/13.3_generic_method.md
+++ b/java/13_generics/13.3_generic_method.md
@@ -4,6 +4,8 @@
 - 메소드 내부에서만 사용하는 제네릭 타입 지정 가능
 - 리턴 타입 앞에 `<T>` 기호 추가하여 사용
 
+![image](https://github.com/user-attachments/assets/3fa93a63-cb24-40b5-b862-99d654b50877)
+
 ```java
 public <T> Box<T> boxing(T t) { ... }
 ```
