--- a/java/11_exception_handling/11.1_exceptions_and_exception_classes.md
+++ b/java/11_exception_handling/11.1_exceptions_and_exception_classes.md
@@ -12,3 +12,7 @@
 - 자바는 예외가 발생하면 예외 클래스로부터 객체를 생성하고, 이 객체는 예외 처리 시 사용됨.
 - 자바의 모든 에러와 예외 클래스는 Throwable을 상속받아 만들어지고, 추가적으로 예외 클래스는 java.lang.Exception 클래스를 상속받음.
 - 자바는 자주 사용되는 예외 클래스를 표준 라이브러리로 제공함.
+
+### 🙋 면접 예상 질문
+- 에러와 예외에 대해 설명해주세요.
+- Exception과 RunTime Exception에 대해 설명해주세요.
