chore: [java] 예외 처리 코드 설명 추가

--- a/java/11_exception_handling/11.2_exception_handling_code.md
+++ b/java/11_exception_handling/11.2_exception_handling_code.md
@@ -20,5 +20,23 @@
     }    
   }
   ```
+### 예외 정보를 얻는 방법
+- `System.out.println(e.getMessage());`
+  - 예외가 발생한 이유만 출력
+  ```java
+  Cannot invoke "String.length()" because "data" is null
+  ```
+- `System.out.println(e.toString());`
+  - 예외의 종류와 예외가 발생한 이유 출력
+  ```java
+  java.lang.NullPointerException: Cannot invoke "String.length()" because "data" is null
+  ```
+- `e.printStackTrace();`
+  - 예외의 종류, 예외가 발생한 이유와 예외가 어디서 발생했는지 추적한 내용까지 출력
+  ```java
+  java.lang.NullPointerException: Cannot invoke "String.length()" because "data" is null
+    at ch11.sec02.exam01.ExceptionHandlingExample2.printLength(ExceptionHandlingExample2.java:6))
+    at ...
+  ```
 ### 🙋 면접 예상 질문
 - 예외 처리 코드는 어떻게 구성되는지 설명해주세요.
