docs: [java] 스레드 동기화 예상 질문 추가

--- a/java/14_multi_thread/14.6_thread_synchronization.md
+++ b/java/14_multi_thread/14.6_thread_synchronization.md
@@ -5,7 +5,7 @@
 ![image](https://github.com/user-attachments/assets/6360280e-45e0-4316-bd4a-38fb522b5764)
 
 
-## 동기화 메소드 및 블록 선언
+### 동기화 메소드 및 블록 선언
 동기화 메소드를 선언하려면 `synchronized` 키워드를 메소드에 붙임. 스레드가 동기화 메소드를 실행하는 즉시 객체는 잠금이 일어나고, 메소드 실행이 끝나면 잠금이 풀림.
 
 ```java
@@ -31,6 +31,7 @@ public void method() {
 ## ⁉️예상 질문
 
 1. Synchronized에 대해 아는 대로 말해주세요.
+2. synchronized 메소드와 synchronized 블록의 차이점은 무엇인가요?
 
 &nbsp;
 
