--- a/java/14_multi_thread/14.6_thread_synchronization.md
+++ b/java/14_multi_thread/14.6_thread_synchronization.md
@@ -28,6 +28,13 @@ public void method() {
 }
 ```
 
+### wait(), notify() 메소드
+`wait()`, `notify()`, 및 `notifyAll()` 메소드는 객체의 모니터를 사용하여 스레드 간의 통신을 조정함. 이들 메소드는 모두 `synchronized` 블록 내에서 사용되어야 함.
+
+- **wait() 메소드**: 현재 스레드를 대기 상태로 전환하고, 다른 스레드가 `notify()` 또는 `notifyAll()`을 호출할 때까지 스레드를 대기시킴.
+- **notify() 메소드**: 대기 중인 스레드 중 하나를 선택하여 대기 상태에서 깨움.
+- **notifyAll() 메소드**: 대기 중인 모든 스레드를 대기 상태에서 깨움.
+
 ## ⁉️예상 질문
 
 1. Synchronized에 대해 아는 대로 말해주세요.
