docs: [java] 요소를 하나씩 처리(루핑) 면접 예상 질문 추가

--- a/java/17_stream_processing/17.8_looping.md
+++ b/java/17_stream_processing/17.8_looping.md
@@ -69,7 +69,7 @@
       </tr>
     </table>
 - 모든 Consumer는 매개값을 처리(소비)하는 `accept()` 메소드를 가지고 있음.
-- Comsumer<? super T>를 람다식으로 표현하면 아래와 같음.
+- Consumer<? super T>를 람다식으로 표현하면 아래와 같음.
   ```java
   T -> { ⋯ }
   또는
@@ -94,5 +94,7 @@ Arrays.stream(arr)
 ```
 
 ### 🙋 면접 예상 질문
-- 루핑이란 무엇인지 설명하고, `peek()`와 `forEach()` 메소드의 차이점에 대해 설명해주세요.
+- 스트림에서 루핑이란 무엇인지 설명하고, `peek()`와 `forEach()` 메소드의 차이점에 대해 설명해주세요.
 - 함수형 인터페이스란 무엇인지 설명해주세요.
+- Consumer 인터페이스는 어떤 역할을 하는지 설명해주세요.
+- 스트림에서 지연 연산(lazy evaluation)이란 무엇이며, 어떤 장점이 있는지 설명해주세요.
