chore: [java] 요소 기본 집계 설명 추가

--- a/java/17_stream_processing/17.10_basic_element_aggregation.md
+++ b/java/17_stream_processing/17.10_basic_element_aggregation.md
@@ -32,3 +32,40 @@ long sum = Arrays.stream(arr)
 System.out.println("2의 배수의 합: " + sum);
 
 ```
+
+### ⭐️Optional 클래스⭐️
+- Optional, OptionalDouble, OptionalInt, OptionalLong 클래스는 단순히 집계값만 저장하는 것이 아니라,
+**집계값이 존재하지 않을 경우 디폴트 값을 설정하거나 집계값을 처리하는 Consumer를 등록할 수 있음.**
+
+#### Optional이 제공하는 메소드
+| 리턴 타입                      | 메소드(매개변수)                                                  |설명
+|----------------------------|------------------------------------------------------------|---|
+| boolean                    | isPresent()                                                |집계값이 있는지 여부|
+| T<br>double<br>int<br>long | orElse(T)<br>orElse(double)<br>orElse(int)<br>orElse(long) |집계값이 없을 경우 디폴트 값 설정|
+|void|ifPresent(Consumer)<br>ifPresent(DoubleConsumer)<br>ifPresent(IntConsumer)<br>ifPresent(LongConsumer)|집계값이 있을 경우 Consumer에서 처리|
+- 컬렉션에 요소가 존재하지 않으면 집계 값을 산출할 수 없으므로 `NoSuchElementException 예외⚠️`가 발생함. ➡️ Optional 클래스의 메소드를 이용하면 예외 발생 예방 가능.
+
+### 예시 코드
+- 상황 : 평균을 구하는 average()를 최종 처리에서 사용할 경우 아래와, 같이 요소(집계값)가 없는 경우를 대비.
+- 1️⃣ `isPresent()` 메소드가 true를 리턴할 때만 집계값을 얻음.
+    ```java
+    OptionalDouble optional = stream.average();
+    if (optional.isPresent()) {
+        System.out.println("평균: " + optional.getAsDouble());
+    } else {
+        System.out.println("평균: 0.0");
+    }
+    ```
+- 2️⃣ `orElse()` 메소드로 집계값이 없을 경우를 대비해서 디폴트 값을 정해놓음.
+```java
+double avg = stream.average().orElse(0.0);
+System.out.println("평균: " + avg);
+```
+- 3️⃣ `ifPresent()` 메소드로 집계값이 있을 경우에만 동작하는 **Consumer 람다식**을 제공함.
+```java
+Stream.average()
+.ifPresent(a -> System.out.println("평균: " + a));
+```
+
+### 🙋 면접 예상 질문
+- Optional 클래스에 대해 설명해주세요.
