fix: [java] 요소 조건 만족 여부(매칭) 오타 수정

--- a/java/17_stream_processing/17.9_matching.md
+++ b/java/17_stream_processing/17.9_matching.md
@@ -91,7 +91,7 @@
 - 모든 Predicate는 매개값을 조사한 후 boolean을 리턴하는 `test()` 메소드를 가지고 있음.
 - Predicate<T>를 람다식으로 표현하면 아래와 같음.
   ```java
-  T -> { ⋯ return true }
+  T -> { ⋯ return true; }
   또는
   T -> true; // 하나의 실행문만 있을 경우 중괄호 생략
   ```
