chore: [java] 요소를 하나씩 처리(루핑) 면접 예상 질문 추가

--- a/java/17_stream_processing/17.8_looping.md
+++ b/java/17_stream_processing/17.8_looping.md
@@ -98,3 +98,4 @@ Arrays.stream(arr)
 - 함수형 인터페이스란 무엇인지 설명해주세요.
 - Consumer 인터페이스는 어떤 역할을 하는지 설명해주세요.
 - 스트림에서 지연 연산(lazy evaluation)이란 무엇이며, 어떤 장점이 있는지 설명해주세요.
+- `peek()` 메소드를 사용하여 데이터를 수정하는 것이 권장되지 않는 이유에 대해 설명해주세요.
