--- a/java/17_stream_processing/17.10_basic_element_aggregation.md
+++ b/java/17_stream_processing/17.10_basic_element_aggregation.md
@@ -69,3 +69,4 @@ Stream.average()
 
 ### 🙋 면접 예상 질문
 - Optional 클래스에 대해 설명해주세요.
+- OptionalDouble, OptionalInt, OptionalLong과 같은 기본형 특화 Optional 클래스들이 존재하는 이유에 대해 설명해주세요.
