fix: [java] 요소 기본 집계 오타 수정

--- a/java/17_stream_processing/17.10_basic_element_aggregation.md
+++ b/java/17_stream_processing/17.10_basic_element_aggregation.md
@@ -5,14 +5,14 @@
 ### 스트림이 제공하는 기본 집계
 - 스트림은 카운팅, 최대, 최소, 평균, 합계 등을 처리하는 아래와 같은 **최종 처리 메소드**를 제공함.
 
-| 리턴 타입                    | 메소드(매개변수)                       | 설명     |
-|--------------------------|---------------------------------|--------|
-| long                     | `count()`                       | 요소 개수  |
-| OptionalXXX              | `findFirst()`                   | 첫번째 요소 |
+| 리턴 타입                    | 메소드(매개변수)                      | 설명     |
+|--------------------------|--------------------------------|--------|
+| long                     | `count()`                      | 요소 개수  |
+| OptionalXXX              | `findFirst()`                  | 첫번째 요소 |
 | Optional&lt;T&gt;<br>OptionalXXX | `max(Comparator<T>)`<br>`max()` | 최대 요소  |
 | Optional&lt;T&gt;<br>OptionalXXX | `min(Comparator<T>)`<br>`min()` | 최소 요소  |
-| OptionalDouble           | `avaerage()`                    | 요소 평균  |
-| int, long, double        | `sum()`                         | 요소 총합  |
+| OptionalDouble           | `average()`                    | 요소 평균  |
+| int, long, double        | `sum()`                        | 요소 총합  |
 - OptionalXXX는 Optional, OptionalDouble, OptionalInt, OptionalLong 클래스를 말함.
 - OptionalXXX는 최종값을 저장하는 객체로 `get()`, `getAsDouble()`, `getAsInt()`, `getAsLong()`을 호출하면 최종값을 얻을 수 있음.
 
@@ -45,8 +45,8 @@ System.out.println("2의 배수의 합: " + sum);
 |void|ifPresent(Consumer)<br>ifPresent(DoubleConsumer)<br>ifPresent(IntConsumer)<br>ifPresent(LongConsumer)|집계값이 있을 경우 Consumer에서 처리|
 - 컬렉션에 요소가 존재하지 않으면 집계 값을 산출할 수 없으므로 `NoSuchElementException 예외⚠️`가 발생함. ➡️ Optional 클래스의 메소드를 이용하면 예외 발생 예방 가능.
 
-### 예시 코드
-- 상황 : 평균을 구하는 average()를 최종 처리에서 사용할 경우 아래와, 같이 요소(집계값)가 없는 경우를 대비.
+### 예시 코드 - 요소가 없는 경우에 Optional 사용 방법
+- 상황 : 평균을 구하는 average()를 최종 처리에서 사용할 때, 아래와 같이 요소(집계값)가 없는 경우를 대비함.
 - 1️⃣ `isPresent()` 메소드가 true를 리턴할 때만 집계값을 얻음.
     ```java
     OptionalDouble optional = stream.average();
