fix: [java] 요소를 하나씩 처리(루핑) 오타 수정

--- a/java/17_stream_processing/17.8_looping.md
+++ b/java/17_stream_processing/17.8_looping.md
@@ -90,7 +90,7 @@ System.out.println("총합: " + total + "\n");
 // 최종 처리 메소드 forEach()를 이용해서 반복 처리
 Arrays.stream(arr)
     .filter(a -> a % 2 == 0)
-    .forEach(n -> System,out.println(n));   // IntConsumer 인스턴스화
+    .forEach(n -> System.out.println(n));   // IntConsumer 인스턴스화
 ```
 
 ### 🙋 면접 예상 질문
