--- a/java/21_java21_features/21.6_virtual-thread.md
+++ b/java/21_java21_features/21.6_virtual-thread.md
@@ -126,6 +126,7 @@ Thread thread = Thread.ofPlatform()
 
 1. 가상 스레드(Virtual Thread)란 무엇이고, 플랫폼 스레드와의 차이에 대해 설명해주세요.
 2. 가상 스레드를 생성하는 메서드에 대해서 설명해 주세요.
+3. 가상 스레드를 스레드풀에 넣어서 풀링해서 써도 될까요?
 
 &nbsp;
 
