--- a/java/21_java21_features/21.2_local_variable_type_inference.md
+++ b/java/21_java21_features/21.2_local_variable_type_inference.md
@@ -1,6 +1,6 @@
 ## 21.2 로컬(지역) 변수 타입 추론
 - 자바 11부터는 로컬 변수를 위한 타입 추론 기능을 사용할 수 있음.
-- 로컬 변수를 선언할 떄 예약된 타입인 `var`를 사용하면 컴파일 시에 로컬 변수에 대입되는 값을 보고
+- 로컬 변수를 선언할 때 예약된 타입인 `var`를 사용하면 컴파일 시에 로컬 변수에 대입되는 값을 보고
 컴파일러가 추론해서 타입을 결정함.
 - `var`는 생성자 또는 메소드 안에서 로컬 변수를 선언할 때만 사용⭕️
 - 클래스나 인터페이스 필드를 선언할 때는 사용❌
