fix: [spring] 마이크로서비스 아키텍처로 진화 오타 수정

--- a/spring/01_spring_in_the_real_world/1.1_evolution_to_microservice_architecture.md
+++ b/spring/01_spring_in_the_real_world/1.1_evolution_to_microservice_architecture.md
@@ -5,7 +5,7 @@
 ### 프레임워크가 필요해진 이유
   - 많은 애플리케이션의 요구 사항이 유사함.
   - 앱에서 구현된 비즈니스 로직의 코드양은 애플리케이션 엔진을 구성하는 휠과 벨트보다 훨씬 적음.
-  - 데이터 저장, 데이터 전송, 보안 구성, 캐싱 등이 필요한 애플리케이션이 많아 매번 같은 기능을 다시 작성하는 것은 효율적이니 않음.
+  - 데이터 저장, 데이터 전송, 보안 구성, 캐싱 등이 필요한 애플리케이션이 많아 매번 같은 기능을 다시 작성하는 것은 효율적이지 않음.
 
 - 💡 비즈니스 로직 코드 : 애플리케이션의 비즈니스 요구 사항을 구현하는 코드 ➡️ 기능적 관점에서 애플리케이션을
 다른 애플리케이션과 구분 짓게 만드는 요소.
