--- a/spring/01_spring_in_the_real_world/1.1_evolution_to_microservice_architecture.md
+++ b/spring/01_spring_in_the_real_world/1.1_evolution_to_microservice_architecture.md
@@ -13,7 +13,7 @@
 ### 프레임워크를 쓰면 좋은 점
   - 자체 개발하지 않고 재사용함으로써 많은 시간과 비용을 절약할 수 있음.
   - 이미 많은 앱에서 구현하는 기존 구현체는 다른 사람이 이미 테스트를 했기 때문에 버그를 불러올 가능성이 낮음.
-  - 동일한 긴으을 이해하는 많은 개발자에게 조언을 구할 수 있음.
+  - 동일한 기능을 이해하는 많은 개발자에게 조언을 구할 수 있음.
 
 ### 🙋 면접 예상 질문
 - 프레임워크란 무엇인지 설명하고, 프레임워크가 필요한 이유를 설명해주세요.
