fix: [spring] 스프링 생태계

--- a/spring/01_spring_in_the_real_world/1.2_spring_ecosystem.md
+++ b/spring/01_spring_in_the_real_world/1.2_spring_ecosystem.md
@@ -2,7 +2,7 @@
 - 스프링은 여러 프레임워크의 생태계임.
 - 일반적으로 개발자가 스프링 프레임워크를 언급할 때는 다음과 같이 소프트웨어 기능 일부분을 언급함.
 - 1️⃣ **스프링 코어**
-  - 기본 기능을 포함하는 스플이의 기반 부분 중 하나로 그 중에는 스프링 컨텍스트임.
+  - 기본 기능을 포함하는 스프링의 기반 부분 중 하나로 그 중에는 스프링 컨텍스트임.
   - 스프링 컨텍스트는 스프링이 앱의 인스턴스를 관리할 수 있게 하는 스프링 프레임워크의 기본 기능임.
   - 다른 스프링 코어로 스프링 애스펙트도 있음.
   - 애스펙트는 스프링이 앱에서 정의한 메소드를 가로채고 조작할 수 있음.
@@ -23,7 +23,7 @@
 ![img.png](img/IoC.png)
 - 스프링은 `제어의 역전(IoC)` 원칙을 기반으로 작동함.
 - 제어의 역전 원칙을 사용하면 ➡️ 앱이 실행을 제어하는 대신 스프링 프레임워크에 제어 권한을 넘김.
-- 제어의 역전에서 역전은 앱이 자체 코드로 실행을 제어하거나 의존성을 사용하지 못하는 대신 프레임워크(의존성)가 앱과 앱의 코드를 제어한다는 의미다.
+- 제어의 역전에서 역전은 앱이 자체 코드로 실행을 제어하거나 의존성을 사용하지 못하는 대신 프레임워크(의존성)가 앱과 앱의 코드를 제어한다는 의미임.
 - 제어의 역전에서 제어는 인스턴스 생성과 메서드 호출 같은 작업을 나타냄. 프레임워크는 앱에서 정의한 클래스의 객체를 생성할 수 있음.
 - 스프링에서는 스프링 컨텍스트라는 IoC 컨테이너를 사용하여 특정 객체를 스프링에 전달해서 프레임워크가 구성한 방식으로 객체를 사용할 수 있게 함.
 
