docs: [spring] 계약 정의를 위한 인터페이스 사용 오타 수정

--- a/spring/04_spring_context__abstractions/4.1_interface_for_contract.md
+++ b/spring/04_spring_context__abstractions/4.1_interface_for_contract.md
@@ -36,10 +36,10 @@
 
 #### 객체 이름 예시
 
-| 역할             | 클래스 이름                  |
-|------------------|------------------------------|
+| 역할            | 클래스 이름                  |
+|-----------------|------------------------------|
 | 댓글 저장       | `CommentRepository`          |
-| 이메일일 전송       | `CommentNotificationProxy`   |
+| 이메일 전송       | `CommentNotificationProxy`   |
 | 댓글 게시 서비스 | `CommentService`             |
 
 #### 코드 예시
