docs: [spring] 추상화와 함께 의존성 주입 오타 수정

--- a/spring/04_spring_context__abstractions/4.2_dependency_injection_with_abstraction.md
+++ b/spring/04_spring_context__abstractions/4.2_dependency_injection_with_abstraction.md
@@ -65,7 +65,7 @@ public class ProjectConfiguration {
 서로 다른 두 클래스로 생성된 빈이 두 개 있고 이 두 빈이 CommentNotificationProxy 인터페이스를 구현한다고 가정할 때, 스프링은 빈 선택 메커니즘을 사용함.
 
 1. @Primary 애너테이션으로 구현할 빈 중 하나를 기본값으로 표시함.
-   2, @Qualifier 애너테이션으로 빈 이름을 지정한 후 DI를 위해 해당 이름으로 참조함.
+2. @Qualifier 애너테이션으로 빈 이름을 지정한 후 DI를 위해 해당 이름으로 참조함.
 
 #### 방법 1: `@Primary`
 
@@ -116,7 +116,7 @@ public class CommentService {
 
 ## ⁉️예상 질문
 
-1. 의존성 주입(Dependency Injection)이란 무엇인인지 설명해주세요.
+1. 의존성 주입(Dependency Injection)이란 무엇인지 설명해주세요.
 2. 생성자 주입과 필드 주입의 차이는 무엇인지 설명해주세요.
 3. 스프링에서 어떤 객체를 빈으로 등록해야 할지 설명해주세요.
 4. 스프링이 관리하지 않는 객체는 어떤 경우에 생기며, 어떻게 처리할 수 있을까요?
