docs: [spring] 구성 파일에서 정의된 빈 간 관계 구현 오타 수정

--- a/spring/03_spring_context__bean_construction/3.1_implementing_bean_relationships.md
+++ b/spring/03_spring_context__bean_construction/3.1_implementing_bean_relationships.md
@@ -49,7 +49,7 @@
   </div>
   </details>
 
-### 3.1.1 두 @Bean 메서드 간 직접 메서드를 호출하는 빈 작성
+### 3.1.1 두 `@Bean` 메서드 간 직접 메서드를 호출하는 빈 작성
 - 인스턴스 간 관계를 설정하는 첫 번째 방법은 `와이어링`이며, **구성 클래스에서 한 메서드가 다른 메서드를 호출하는 것**을 말함.
 ```java
 @Configuration
@@ -107,8 +107,8 @@ public class ProjectConfig {
 
 - 💠 `의존성 주입(DI)` : 프레임워크가 특정 필드 또는 매개변수에 값을 설정하는 기법
 - DI는 IoC 원리를 응용한 것으로, IoC는 프레임워크가 실행될 때 애플리케이션을 제어하는 것을 의미함.
-- DI는 생성된 객체 인스턴스를 관리하고 앱을 개발할 때 작성하는 코드를 최소화하는데 도움이 되는 매우 편리한 방법임.
+- DI는 생성된 객체 인스턴스를 관리하고 앱을 개발할 때 작성하는 코드를 최소화하는 데 도움이 되는 매우 편리한 방법임.
 
 ### 🙋 면접 예상 질문
-- @Bean 메서드에서 다른 @Bean 메서드를 직접 호출할 때 스프링이 어떻게 싱글톤 인스턴스를 보장하는지 설명해주세요.
+- `@Bean` 메서드에서 다른 `@Bean` 메서드를 직접 호출할 때 스프링이 어떻게 싱글톤 인스턴스를 보장하는지 설명해주세요.
 - 스프링에서 빈 간의 관계를 구현하는 두 가지 방법인 와이어링과 오토와이어링의 차이점에 대해 설명해주세요.
