--- a/spring/03_spring_context__bean_construction/3.2_autowired_bean_injection.md
+++ b/spring/03_spring_context__bean_construction/3.2_autowired_bean_injection.md
@@ -1,4 +1,4 @@
-## 3.2 @Autowired 애너테이션을 사용한 빈 주입
+## 3.2 `@Autowired` 애너테이션을 사용한 빈 주입
 - 빈 간의 관계를 만드는데 사용되는 다른 방식은 `@Autowired` 애너테이션을 사용하는 것임.
 - `@Autowired` 애너테이션을 사용하면 스프링이 컨텍스트에서 값을 주입하길 원하는 객체 속성을 표시하고, 의존성이 필요한 객체를 정의하는
 클래스에 이 의도를 직접 표시할 수 있음.
@@ -39,15 +39,15 @@ public class ProjectConfig {
     
 }
 ```
-- 위의 코드에서 @Component는 스프링이 이 클래스 타입의 빈을 생성하고 추가하도록 지시함.
+- 위의 코드에서 `@Component`는 스프링이 이 클래스 타입의 빈을 생성하고 추가하도록 지시함.
 - 그리고 @Autowired 애너테이션을 추가하여 해당 컨텍스트에서 스프링에 값을 주입하고 싶다고 알림.
 - 이 방식이 **프로덕션 코드에서 바람직하지 않은 이유는 ❗️필드를 `final`로 만들 수 있는 방법이 없다는 것❗️**임.
 - final로 만들면 초기화한 후 아무도 값을 변경하지 못하게 할 수 있는데 이 방식에서는 사용할 수 없음.
 
 
-### 3.2.2 @Autowired를 사용하여 생성자로 값 주입
+### 3.2.2 `@Autowired`를 사용하여 생성자로 값 주입
 - 이 방법은 **⭐️프로덕션 코드에서 가장 자주 이용되는 방식⭐️**이며 필자가 권장하는 방식임.
-- 이 방법을 이용하면 필드를 final로 정의할 수 있어 스프링이 필드를 초기화한 후에는 아무도 필드 값을 변경할 수 없음.
+- 이 방법을 이용하면 필드를 `final`로 정의할 수 있어 스프링이 필드를 초기화한 후에는 아무도 필드 값을 변경할 수 없음.
 - 생성자를 호출할 때 값을 설정할 수 있다는 점에서 특정 단위 테스트를 작성할 때도 도움이 됨.
 ```java
 @Component
@@ -64,7 +64,7 @@ public class Person {
 ```
 - 3.2.1에서 필드 주입 방식을 생성자 주입 방식으로 변경함.
 - 이 방식에서는 클래스에 대한 생성자를 정의하고 `@Autowired`로 애너테이션을 달아야 함.
-- 이제 Parrot을 final 필드로 만들 수 있음.
+- 이제 Parrot을 `final` 필드로 만들 수 있음.
 
 ### 3.2.3 setter를 이용한 의존성 주입 사용
 - 이 방식도 많이 사용되지는 않음. ➡️ 가독성이 떨어지고, final 필드를 만들 수 없고, 테스트를 더 쉽게 만드는데 도움이 되지 않기 때문.
@@ -82,9 +82,9 @@ public class Person {
     } 
 }
 ```
-- 위의 코드는 setter에 @Autowired 애너테이션을 사용함.
+- 위의 코드는 setter에 `@Autowired` 애너테이션을 사용함.
 
 ### 🙋 면접 예상 질문
-- @Autowired 애너테이션을 사용한 의존성 주입의 세 가지 방법에 대해 설명하고, 각각의 장단점을 비교해주세요.
+- `@Autowired` 애너테이션을 사용한 의존성 주입의 세 가지 방법에 대해 설명하고, 각각의 장단점을 비교해주세요.
 - 생성자 주입 방식이 프로덕션 코드에서 가장 권장되는 이유에 대해 설명해주세요.
 - 필드 주입 방식보다 생성자 주입 방식이 테스트하기 더 용이한 이유에 대해 설명해주세요.
