--- a/spring/08_implementing_web_applications_with_spring_boot_and_spring_mvc/8.1_dynamic_views_for_web_apps.md
+++ b/spring/08_implementing_web_applications_with_spring_boot_and_spring_mvc/8.1_dynamic_views_for_web_apps.md
@@ -66,8 +66,8 @@ public class MainController {
 
 - 1️⃣ **HTTP 요청 매개변수(request parameter)** : 키-값 쌍으로 된 형식으로 클라이언트에서 서버로 값을 전송하는 간단한 방식. 쿼리 매개변수라고도 함. HTTP
 요청 매개변수를 보내려면 요청 쿼리 표현식의 URI에 매개변수를 추가함. 이 방식은 소량의 데이터를 전송할 때만 사용해야 함.
-- 2️⃣ **HTTP 요청 헤더(request header)** : 요청 헤더가 HTTP 헤더로 전송된다는 점에서 요청 매개변수와 유사함. 가장 큰 차이점은 URI에 표시되지 않는다는 것임.
-하지만 HTTP 헤더를 사용하여 대량의 데이터는 전송할 수 없는 것은 동일함.
+- 2️⃣ **HTTP 요청 헤더(request header)** : 요청에 대한 `부가 정보`를 키-값 형식으로 서버에 전달하는 점에서 요청 매개변수와 유사함. 하지만 HTTP 헤더 영역을 통해
+전달되며, URI에 표시되지 않음. 마찬가지로 대량의 데이터는 전송할 수 없는 것은 동일함. (ex. 쿠키, 인증 정보, 콘텐츠 타입 등)
 - 3️⃣ **경로 변수(path variable)** : 요청 경로 자체를 이용하여 데이터를 전송함. 요청 매개변수 접근 방식과 동일하게 경로 변수를 사용하여 소량의 데이터를 전송함.
 하지만 전송하는 값이 필수라면 경로 변수를 사용해야 함.
 - 4️⃣ **HTTP 요청 본문(request body)** : 주로 대량의 데이터를 전송하는데 사용됨.
