docs: [spring] 스프링 부트의 마법 수정

--- a/spring/07_understanding_spring_boot_and_spring_mvc/7.2_spring_boot.md
+++ b/spring/07_understanding_spring_boot_and_spring_mvc/7.2_spring_boot.md
@@ -16,7 +16,7 @@
 
 ![image](https://github.com/user-attachments/assets/a0b89f5d-8152-4051-99c3-b081fed08924)
 
-생성된 프로젝트에는 다음과 같은 내용이 포함된다.
+생성된 프로젝트에는 다음과 같은 내용이 포함됨.
 
 - 스프링 앱 메인 클래스
 - 스프링 부트 부모 POM
