docs: [spring] RestTemplate으로 REST 엔드포인트 호출 오타 수정

--- a/spring/11_using_rest_endpoints/11.2_calling_rest_endpoint_with_resttemplate.md
+++ b/spring/11_using_rest_endpoints/11.2_calling_rest_endpoint_with_resttemplate.md
@@ -3,7 +3,7 @@
 ### 호출 단계
 
 1. `HttpHeaders` 인스턴스 생성 및 구성하여 HTTP 헤더를 정의함.
-2. 요청 데이터(헤더와 본문을 나타내는 ``HttpEntity` 인스턴스)를 생성함.
+2. 요청 데이터(헤더와 본문을 나타내는 `HttpEntity` 인스턴스)를 생성함.
 3. `exchange()` 메서드를 사용하여 HTTP 호출을 전송하고 HTTP 응답을 수신함.
 
 ![image](https://github.com/user-attachments/assets/cf7750f7-1289-421c-85b8-7ea489d3ec72)
