docs: [spring] 스프링 클라우드 OpenFeign으로 REST 엔드포인트 호출 내용 보충

--- a/spring/11_using_rest_endpoints/11.1_calling_rest_endpoint_with_openfeign.md
+++ b/spring/11_using_rest_endpoints/11.1_calling_rest_endpoint_with_openfeign.md
@@ -6,19 +6,14 @@
 - **RestTemplate**: 스프링 3부터 사용된 REST 엔드포인트 호출 도구. 새로운 앱에서는 OpenFeign 사용을 권장함.
 - **WebClient**: 리액티브 프로그래밍 기반의 대안 도구
 
-### OpenFeign 특징
+OpenFeign을 사용하면 개발자는 인터페이스만 작성하고 이 도구가 구현을 제공함.
 
-- 인터페이스만 작성하면 구현을 자동으로 생성함.
-- 애너테이션으로 경로, HTTP 메서드, 매개변수, 헤더, 요청 본문 정의함.
-- 메서드 직접 구현할 필요 없음.
+- 메서드에 애너테이션을 추가하여 경로, HTTP 메서드, 매개변수, 헤더 및 요청 본문을 정의함.
+- 메서드를 직접 구현할 필요 없음.
 
 ![image](https://github.com/user-attachments/assets/c9d42717-a6fa-4037-8ea4-6b500c14fa03)
 
-
 ### 1. `pom.xml`에 의존성 정의
-
-<details>
-<summary>pom.xml</summary>
 
 ```xml
 <dependencies>
@@ -30,9 +25,9 @@
 </dependencies>
 ```
 
-</details>
-
 ### 2. `@FeignClient` 인터페이스 정의
+
+환경마다 달라질 수 있는 URI 및 기타 세부 정보는 항상 프로퍼티 파일에 저장하고 앱에 하드코딩하지 않음.
 
 ```java
 @FeignClient(name = "payments", url = "${name.service.url}")
@@ -50,7 +45,7 @@ public interface PaymentsProxy {
 public class ProjectConfig {}
 ```
 
-### 4. 컨트롤러에서 프록시 사용
+### 4. FeignClient 클라이언트 주입
 
 ```java
 @RestController
@@ -69,7 +64,7 @@ public class PaymentsController {
 }
 ```
 
-### cURL 명령
+### cURL 테스트
 
 ```bash
 curl -X POST -H 'content-type:application/json' -d '{"amount":1000}' http://localhost:9090/payment
