--- a/spring/11_using_rest_endpoints/11.2_calling_rest_endpoint_with_resttemplate.md
+++ b/spring/11_using_rest_endpoints/11.2_calling_rest_endpoint_with_resttemplate.md
@@ -1,6 +1,12 @@
 ## 11.2 RestTemplate으로 REST 엔드포인트 호출
 
-### 호출 단계
+아래와 같이 RestTemplate으로 구현하기 어려운 기능을 구현하기 위해 **OpenFeign**을 사용한다.
+
+- 엔드포인트를 동기 및 비동기식으로 모두 호출하기
+- 더 적은 코드 작성 및 더 적은 예외 처리
+- 호출 실행 재시도 및 폴백 작업 구현
+
+### 호출 정의 단계
 
 1. `HttpHeaders` 인스턴스 생성 및 구성하여 HTTP 헤더를 정의함.
 2. 요청 데이터(헤더와 본문을 나타내는 `HttpEntity` 인스턴스)를 생성함.
@@ -44,7 +50,7 @@ public class PaymentsController {
 }
 ```
 
-### cURL 명령
+### cURL 테스트
 
 ```bash
 curl -X POST -H 'content-type:application/json' -d '{"amount":1000}' http://localhost:9090/payment
