docs: [spring] WebClient로 REST 엔드포인트 호출 내용 보충

--- a/spring/11_using_rest_endpoints/11.3_calling_rest_endpoint_with_webclient.md
+++ b/spring/11_using_rest_endpoints/11.3_calling_rest_endpoint_with_webclient.md
@@ -1,7 +1,24 @@
 ## 11.3 WebClient로 REST 엔드포인트 호출
 
-- 스프링 문서에서는 WebClient 사용을 권장하지만, 이는 리액티브 앱에서만 해당됨.
-- 액티브 앱이 아니라면 OpenFeign 사용을 추천함.
+WebClient는 다양한 앱에서 사용되는 도구이며 리액티브 방식(reactive approach)이라는 방법론을 기반으로 함.
+
+- 스프링 문서에서는 **WebClient** 사용을 권장하지만, 이는 리액티브(반응형) 앱에서만 해당됨.
+- 리액티브 앱이 아니라면 **OpenFeign** 사용을 추천함.
+
+### 리액티브 앱이란?
+- 반응형 프로그래밍 패러다임을 기반으로 구축된 애플리케이션
+- 기존의 전통적인 명령형(Imperative) 프로그래밍 방식과 달리, 데이터 흐름과 변경 사항을 중심으로 애플리케이션을 설계하고 구현함.
+- 비동기(Asynchronous) 및 논블로킹(Non-blocking) 방식으로 동작함.
+
+리액티브가 아닌 앱에서는 스레드가 비즈니스 흐름(business flow)을 실행함. 비즈니스 흐름은 여러 태스크(task)로 구성되지만, 상호 독립적이지 않으며 동일 스레드가 이 플로를 구성하는 모든 태스크를 실행함.
+
+아래와 같은 단계의 플로를 구현한다.
+
+1. 앱은 사용자 ID를 받는다.
+2. 시스템의 다른 서비스를 호출하여 사용자가 다른 기관에 신용 계좌를 보유하고 있는지 확인한다.
+3. 시스템의 다른 서비스를 호출하여 내부 신용 계좌에 대한 채무를 가져온다.
+4. 사용자에게 외부 채무가 있다면 외부 서비스를 호출하여 외부 채무를 확인한다.
+5. 앱은 채무를 합산하여 그 값을 HTTP 응답으로 반환한다.
 
 ![image](https://github.com/user-attachments/assets/d0fbd745-434c-4810-9a19-9ba2b0e38cca)
 
@@ -14,7 +31,7 @@
 </dependency>
 ```
 
-### 2. 구성 클래스에서 WebClient 빈 등록
+### 2. 구성 클래스에 WebClient 빈 추가
 
 ```java
 @Configuration
@@ -26,7 +43,7 @@ public class ProjectConfig {
 }
 ```
 
-### 3. 프록시 클래스 정의
+### 3. 프록시 클래스 구현
 
 ```java
 @Component
@@ -48,7 +65,7 @@ public class PaymentsProxy {
 }
 ```
 
-### 4. 컨트롤러 정의
+### 4. 컨트롤러 클래스 구현
 
 ```java
 @RestController
@@ -62,7 +79,7 @@ public class PaymentsController {
 }
 ```
 
-### cURL 명령
+### cURL 테스트
 
 ```bash
 curl -X POST -H 'content-type:application/json' -d '{"amount":1000}' http://localhost:9090/payment
