docs: [spring] 스프링에서 트랜잭션의 작동 방식 면접 예상 질문 추가

--- a/spring/13_using_transactions_in_spring_applications/13.2_how_transactions_work_in_spring.md
+++ b/spring/13_using_transactions_in_spring_applications/13.2_how_transactions_work_in_spring.md
@@ -30,3 +30,9 @@ public void transferMoney() {
        // 예외를 여기서 처리하면 롤백되지 않음
    }
 }
+```
+
+### 🙋 면접 예상 질문
+- 트랜잭션 동작 원리에 대해 설명해주세요.
+- 체크 예외(checked Exception)에 대해 설명하고, 트랜잭션에서 체크 예외가 발생하면 롤백이 되는지 설명해주세요.
+- 트랜잭션 메서드에서 예외를 직접 처리하면 어떻게 되는지 설명해주세요.
