fix: [spring] 스프링 앱에서 테스트 구현

--- a/spring/15_testing_spring_applications/15.2_implementing_tests_in_spring_applications.md
+++ b/spring/15_testing_spring_applications/15.2_implementing_tests_in_spring_applications.md
@@ -398,4 +398,4 @@ class TransferServiceSpringIntegrationTests {
 - assertThrows()는 언제 사용하는지 설명해주세요.
 - 스프링 시큐리티가 적용된 컨트롤러는 어떻게 테스트하는지 설명해주세요.
 - 테스트 실행 시간을 단축하는 방법은 무엇인지 설명해주세요.
-- 테스트 코드도 리팩토리이이 필요한지 설명해주세요.
+- 테스트 코드도 리팩토링이 필요한지 설명해주세요.
